# Notely

./: .gitignore  .tmp_App_head.tsx  README.md  index.html  package-lock.json  package.json  vite.config.ts
scripts/: build-release.ps1  generate-app.mjs  setup-windows-env.ps1  split-app.mjs
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  custom-languages.template.jsonc  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/wix/: file-association-icons.wxs
src/api/: files.ts
src/constants/: index.ts
src/editor/: CodeMirrorEditor.tsx
src/languages/: builtIn.ts  detect.ts  extensions.ts  parseCustom.ts
src/search/: decorations.ts  matching.ts
src/storage/: settings.ts
src/tabs/: tabUtils.ts
src/types/: index.ts
src/utils/: id.ts  path.ts  text.ts
