[package]
name = "notely"
version = "0.1.0"
description = "A lightweight cross-platform text editor."
authors = ["Notely"]
edition = "2021"

[lib]
name = "notely_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.1", features = [] }

[dependencies]
rfd = "0.14"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2.4", features = [] }
thiserror = "1"
