[package]
name = "notely"
version = "2.5.0"
description = "A lightweight cross-platform text editor."
authors = ["Notely"]
edition = "2021"

[lib]
name = "notely_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.1", features = [] }

[dependencies]
encoding_rs = "0.8"
rfd = "0.14"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2.4", features = [] }
tauri-plugin-single-instance = "2"
thiserror = "1"
windows-sys = { version = "0.59", features = ["Win32_Storage_FileSystem"] }
